k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
      tier: api-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: api-gateway
    spec:
      containers:
        - image: effectivemadness/spring-petclinic-api-gateway:latest
          imagePullPolicy: Always
          name: api-gateway
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: spring-petclinic
    tier: api-gateway
