k8s/customers-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers
  labels:
    app: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
      tier: customers
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring-petclinic
        tier: customers
    spec:
      containers:
        - image: effectivemadness/spring-petclinic-customers-service:latest
          imagePullPolicy: Always
          name: customers
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  labels:
    app: spring-petclinic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: spring-petclinic
    tier: customers
