k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: api-gateway
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: $1
  name: services-ingress-nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/vet(/.*)
        pathType: Prefix
        backend:
          service:
            name: vets-service
            port:
              number: 80
      - path: /api/visit(/.*)
        pathType: Prefix
        backend:
          service:
            name: visits-service
            port:
              number: 80
      - path: /api/customer(/.*)
        pathType: Prefix
        backend:
          service:
            name: customers-service
            port:
              number: 80
      - path: /api/gateway(/.*)
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:       
              number: 80
